# Mini-temperature-monitoring-machine

booloader_customization/usb-f407/: .cproject  .mxproject  .project  usb-f407 Debug.launch  usb-f407.ioc
booloader_customization/usb-f407/Core/Inc/: bootloader.h  flash.h  led_bootloader.h  task_list.h  usb_handle.h
booloader_customization/usb-f407/Core/Src/: bootloader.c  flash.c  led_bootloader.c  main.c  task_list.c  usb_handle.c
booloader_customization/usb-f407/Debug/: makefile  objects.list  usb-f407.elf  usb-f407.list  usb-f407.map
booloader_customization/usb-f407/Debug/Core/Src/: CRC.cyclo  CRC.d  CRC.su  bootloader.cyclo  bootloader.d  bootloader.su  flash.cyclo  flash.d  flash.su  led_bootloader.cyclo  led_bootloader.d  led_bootloader.su  main.cyclo  main.d  main.su  subdir.mk  task_list.cyclo  task_list.d  task_list.su  usb_handle.cyclo  usb_handle.d  usb_handle.su
booloader_customization/usb-f407/Debug/USB_DEVICE/App/: usbd_cdc_if.cyclo  usbd_cdc_if.d  usbd_cdc_if.su
booloader_customization/usb-f407/USB_DEVICE/App/: usbd_cdc_if.c  usbd_desc.c
mcu_program_test/Blynk_led/: .cproject  .mxproject  .project  Blynk_led.ioc  STM32F407VGTX_FLASH.ld  STM32F407VGTX_RAM.ld
mcu_program_test/Blynk_led/Core/Src/: main.c
mcu_program_test/Blynk_led/Debug/: makefile
sw_backend/: Blynk_led.hex  Makefile  main.c  protocol.c  protocol.h
sw_gui/: CMakeLists.txt  CRC.cpp  CRC_Cfg.h  Main.qml  main.cpp  stm32_usb_dev.cpp  stm32_usb_dev.h
usb_driver/: Makefile  usb_dev.c
